--- a/html/htmlTeoria/01.html
+++ b/html/htmlTeoria/01.html
@@ -4,82 +4,121 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aprendido HTML</title>
     <link rel="stylesheet" href="/styles/01.css">
-    <title>Document</title>
 </head>
 <body>
-<h1>Campeones de lol</h1>
-<ul>
-    <li>Quinn</li>
-    <li>Hecarim</li>
-    <li>Teemo</li>
-    <li>Cassiopeia</li>
-    <li>Shaco</li>
-    <li>Karthus</li>
-    <li>Zac</li>
-    <li>Sion</li>
-</ul>
-<img src="/media/lolCampeones.jpg" alt="">
-<div class="container">
-    <table>
-        <tr>
-            <th>Campeones</th>
-            <th>Rol</th>
-            <th>Linea</th>
-            <th>Roto</th>
-        </tr>
-        <tr>
-            <td>Quinn</td>
-            <td>Tirador</td>
-            <td>Adc</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Hecarim</td>
-            <td>Luchador</td>
-            <td>Jungla</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Teemo</td>
-            <td>Tirador</td>
-            <td>Adc</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Cassiopeia</td>
-            <td>Mago</td>
-            <td>Mid</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Shaco</td>
-            <td>Asesino</td>
-            <td>Jungla</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Karthus</td>
-            <td>Mago</td>
-            <td>Mid</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Zac</td>
-            <td>Tanque</td>
-            <td>Jungla</td>
-            <td>False</td>
-        </tr>
-        <tr>
-            <td>Sion</td>
-            <td>Tanque</td>
-            <td>Top</td>
-            <td>False</td>
-        </tr>
-    </table>
-    <video poster="https://i.ytimg.com/vi/sAzlOvv1_60/maxresdefault.jpg" controls src="/media/tutorial.mp4" type="video"></video>
-    
-</div>
+    <header>
+        <img src="/media/lolCampeones.jpg" alt="">
+    </header>
+    <nav>
+        <ul>
+            <li>Home</li>
+            <li>Tutorial</li>
+            <li>Campeones</li>
+            <li>Footer</li>
+        </ul>
+    </nav>
+    <div class="contenedor">
+        <article>
+            <h1>Tutorial de como jugar League of Legends</h1>
+            <section>
+                <video src="/media/tutorial.mp4"></video>
+            </section>
+        </article>
+        <aside>
+            <table>
+                <tr>
+                    <th>Nombre</th>
+                    <th>Rol</th>
+                    <th>Posicion</th>
+                    <th>Historia</th>
+                </tr>
+                <tr>
+                    <td>Garen</td>
+                    <td>Tanque</td>
+                    <td>Top</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, soluta.</td>
+                </tr>
+                <tr>
+                    <td>Zed</td>
+                    <td>Asesino</td>
+                    <td>Mid</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, officia.</td>
+                </tr>
+                <tr>
+                    <td>Fiora</td>
+                    <td>Luchador</td>
+                    <td>Top</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ut.</td>
+                </tr>
+                <tr>
+                    <td>Garen</td>
+                    <td>Tanque</td>
+                    <td>Top</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates, soluta.</td>
+                </tr>
+                <tr>
+                    <td>Fiora</td>
+                    <td>Luchador</td>
+                    <td>Top</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ut.</td>
+                </tr>
+                <tr>
+                    <td>Fiora</td>
+                    <td>Luchador</td>
+                    <td>Top</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ut.</td>
+                </tr>
+                <tr>
+                    <td>Zed</td>
+                    <td>Asesino</td>
+                    <td>Mid</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem, officia.</td>
+                </tr>
+                <tr>
+                    <td>Fiora</td>
+                    <td>Luchador</td>
+                    <td>Top</td>
+                    <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, ut.</td>
+                </tr>
+            </table>
+        </aside>
+    </div>
+    <div>
+        <article class="article2">
+            <div class="box">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+            </div>
+            <div class="box">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+                <img src="/media/itachi.jpg" alt="">
+            </div>
+        </article>
+    </div>
+    <footer>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    </footer>
+
 </body>
 </html>
-
